--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8oh-Ba-1S6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8oh-Ba-1S6">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -77,7 +77,6 @@
                                     <constraint firstItem="4hn-7f-4W9" firstAttribute="leading" secondItem="tQ2-oI-7UA" secondAttribute="leading" id="ZjE-8h-RCy"/>
                                     <constraint firstAttribute="trailing" secondItem="9Rh-wC-bNl" secondAttribute="trailing" id="eCk-PL-5fr"/>
                                     <constraint firstItem="9Rh-wC-bNl" firstAttribute="top" secondItem="4hn-7f-4W9" secondAttribute="bottom" constant="15" id="oVD-k1-cvK"/>
-                                    <constraint firstItem="9Rh-wC-bNl" firstAttribute="top" secondItem="DDq-rH-0E0" secondAttribute="bottom" constant="15" id="tMb-ou-Jcl"/>
                                 </constraints>
                             </stackView>
                         </subviews>
@@ -168,6 +167,7 @@
                                     <outlet property="dateLabel" destination="Qlb-em-Wnm" id="bfW-t9-u0J"/>
                                     <outlet property="notesLabel" destination="QMb-2T-dNL" id="qpj-eu-dMG"/>
                                     <outlet property="titleLabel" destination="OeL-Dw-6Pi" id="XxH-Gk-QCm"/>
+                                    <segue destination="diB-uY-sUa" kind="show" id="iAw-L0-ALt"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -187,6 +187,99 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lVd-wu-99D" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2366.666666666667" y="768.75"/>
+        </scene>
+        <!--Entry Details-->
+        <scene sceneID="Z3h-2r-sHV">
+            <objects>
+                <viewController id="diB-uY-sUa" customClass="EntryDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="qtD-hu-dOp">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Yeg-5J-XYd">
+                                <rect key="frame" x="20" y="160" width="374" height="301"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="riy-c8-LJu">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="MxM-L1-ynj"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="eWk-IP-5yu">
+                                        <rect key="frame" x="0.0" y="55" width="374" height="32"/>
+                                        <segments>
+                                            <segment title="Happy"/>
+                                            <segment title="Sad"/>
+                                            <segment title="Neutral"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Qxb-4u-nlg">
+                                        <rect key="frame" x="0.0" y="101" width="374" height="200"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8O2-x9-Foo">
+                                                <rect key="frame" x="0.0" y="0.0" width="60" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="69B-EF-cee"/>
+                                                    <constraint firstAttribute="width" constant="60" id="QEI-60-C6L"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MAl-uD-42m">
+                                                <rect key="frame" x="0.0" y="38" width="374" height="2"/>
+                                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="2" id="IWc-Q3-fFd"/>
+                                                </constraints>
+                                            </view>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="k8r-p0-tMY">
+                                                <rect key="frame" x="0.0" y="48" width="374" height="152"/>
+                                                <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="200" id="I5o-ZE-hrm"/>
+                                            <constraint firstItem="MAl-uD-42m" firstAttribute="top" secondItem="8O2-x9-Foo" secondAttribute="bottom" constant="8" id="M6e-go-xWy"/>
+                                            <constraint firstAttribute="trailing" secondItem="k8r-p0-tMY" secondAttribute="trailing" id="cNB-NB-irX"/>
+                                            <constraint firstItem="k8r-p0-tMY" firstAttribute="top" secondItem="MAl-uD-42m" secondAttribute="bottom" constant="8" id="v5l-EG-2DE"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="eWk-IP-5yu" firstAttribute="leading" secondItem="Yeg-5J-XYd" secondAttribute="leading" id="RrR-B1-NsP"/>
+                                    <constraint firstItem="Qxb-4u-nlg" firstAttribute="leading" secondItem="Yeg-5J-XYd" secondAttribute="leading" id="SFv-Da-o50"/>
+                                    <constraint firstItem="eWk-IP-5yu" firstAttribute="top" secondItem="riy-c8-LJu" secondAttribute="bottom" constant="15" id="dXN-DI-MPq"/>
+                                    <constraint firstAttribute="trailing" secondItem="eWk-IP-5yu" secondAttribute="trailing" id="qgV-Zu-oZJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="Qxb-4u-nlg" secondAttribute="trailing" id="sFD-C5-nB1"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Yeg-5J-XYd" firstAttribute="leading" secondItem="Ztk-bJ-7pQ" secondAttribute="leading" constant="20" id="Jtw-Nj-Edc"/>
+                            <constraint firstItem="Ztk-bJ-7pQ" firstAttribute="trailing" secondItem="Yeg-5J-XYd" secondAttribute="trailing" constant="20" id="ZR0-pe-mhM"/>
+                            <constraint firstItem="Yeg-5J-XYd" firstAttribute="trailing" secondItem="qtD-hu-dOp" secondAttribute="trailingMargin" id="bFO-CZ-dyb"/>
+                            <constraint firstItem="Yeg-5J-XYd" firstAttribute="top" secondItem="Ztk-bJ-7pQ" secondAttribute="top" constant="20" id="h0A-tt-61f"/>
+                            <constraint firstItem="Yeg-5J-XYd" firstAttribute="leading" secondItem="qtD-hu-dOp" secondAttribute="leadingMargin" id="pRP-ut-KyF"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Ztk-bJ-7pQ"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Entry Details" id="lgz-bf-RVM"/>
+                    <connections>
+                        <outlet property="journalEntryTextView" destination="k8r-p0-tMY" id="iXM-cK-KqX"/>
+                        <outlet property="journalTitleText" destination="riy-c8-LJu" id="81T-Li-vfB"/>
+                        <outlet property="moodSelectControl" destination="eWk-IP-5yu" id="1T9-Pb-QmI"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gdp-hK-29V" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3370" y="769"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="4sm-eJ-l5X">
@@ -226,6 +319,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="plus.square" catalog="system" width="64" height="56"/>
+        <image name="plus.square" catalog="system" width="128" height="114"/>
     </resources>
 </document>
