--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -214,7 +214,7 @@
                                     <outlet property="bodyTextLabel" destination="Flv-8h-ZHa" id="jE9-XD-FdV"/>
                                     <outlet property="timeStampLabel" destination="zb1-qR-jmH" id="hKa-iU-54U"/>
                                     <outlet property="titleLabel" destination="xmC-91-8Sl" id="Y6Y-mp-TUw"/>
-                                    <segue destination="7bP-7V-5zj" kind="show" id="TLe-VF-ZVd"/>
+                                    <segue destination="7bP-7V-5zj" kind="show" identifier="ShowDetailSegue" id="TLe-VF-ZVd"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
