--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -177,17 +177,17 @@
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="hCP-W5-n6U">
                                             <rect key="frame" x="10" y="10" width="394" height="87"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="247" translatesAutoresizingMaskIntoConstraints="NO" id="HWA-Af-o7d">
+                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="HWA-Af-o7d">
                                                     <rect key="frame" x="0.0" y="0.0" width="394" height="24"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xmC-91-8Sl">
-                                                            <rect key="frame" x="0.0" y="0.0" width="73" height="24"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="138" height="24"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="TimeStamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zb1-qR-jmH">
-                                                            <rect key="frame" x="320" y="0.0" width="74" height="24"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="TimeStamp" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zb1-qR-jmH">
+                                                            <rect key="frame" x="142" y="0.0" width="252" height="24"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -204,10 +204,10 @@
                                         </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="hCP-W5-n6U" secondAttribute="bottom" constant="10" id="A0i-Rv-OdS"/>
-                                        <constraint firstAttribute="trailing" secondItem="hCP-W5-n6U" secondAttribute="trailing" constant="10" id="tQh-dT-Flk"/>
-                                        <constraint firstItem="hCP-W5-n6U" firstAttribute="top" secondItem="djP-N0-Dv8" secondAttribute="top" constant="10" id="tfr-ad-KOr"/>
-                                        <constraint firstItem="hCP-W5-n6U" firstAttribute="leading" secondItem="djP-N0-Dv8" secondAttribute="leading" constant="10" id="xcR-qQ-4Ib"/>
+                                        <constraint firstAttribute="bottom" secondItem="hCP-W5-n6U" secondAttribute="bottom" constant="10" id="00s-fL-0Hb"/>
+                                        <constraint firstItem="hCP-W5-n6U" firstAttribute="top" secondItem="djP-N0-Dv8" secondAttribute="top" constant="10" id="39Q-QN-yK1"/>
+                                        <constraint firstItem="hCP-W5-n6U" firstAttribute="leading" secondItem="djP-N0-Dv8" secondAttribute="leading" constant="10" id="Mpv-Yt-xxl"/>
+                                        <constraint firstAttribute="trailing" secondItem="hCP-W5-n6U" secondAttribute="trailing" constant="10" id="ugA-ez-g2J"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -230,6 +230,12 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="sGy-9w-tK6">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refresh:" destination="2ph-sX-SeE" eventType="valueChanged" id="shO-7l-wsm"/>
+                        </connections>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1YT-ga-bxk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
