--- a/Journal/Journal/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Storyboards/Base.lproj/Main.storyboard
@@ -18,19 +18,24 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="b4a-pR-0i7">
                                 <rect key="frame" x="20" y="96" width="374" height="746"/>
                                 <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="2" translatesAutoresizingMaskIntoConstraints="NO" id="okX-fs-Roj">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="32"/>
+                                        <segments>
+                                            <segment title="😀"/>
+                                            <segment title="😢"/>
+                                            <segment title="😐"/>
+                                        </segments>
+                                    </segmentedControl>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YTJ-D3-i83">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="40"/>
+                                        <rect key="frame" x="0.0" y="46" width="374" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="rpx-Eo-UeU"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits"/>
-                                        <connections>
-                                            <action selector="entryTextFieldEdited:" destination="T8D-5N-3nX" eventType="editingDidEnd" id="1E8-gX-Ya0"/>
-                                        </connections>
                                     </textField>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="03c-5o-CDH">
-                                        <rect key="frame" x="0.0" y="55" width="374" height="691"/>
+                                        <rect key="frame" x="0.0" y="101" width="374" height="645"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wfa-Lo-OJ0">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
@@ -46,7 +51,7 @@
                                                 </constraints>
                                             </view>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Place notes here" translatesAutoresizingMaskIntoConstraints="NO" id="npy-c0-9Wg">
-                                                <rect key="frame" x="0.0" y="38.5" width="374" height="652.5"/>
+                                                <rect key="frame" x="0.0" y="38.5" width="374" height="606.5"/>
                                                 <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -86,6 +91,7 @@
                     <connections>
                         <outlet property="cancelButton" destination="NV8-Vd-QiP" id="Gkn-FF-Pfm"/>
                         <outlet property="entryTextField" destination="YTJ-D3-i83" id="7gd-k0-pqJ"/>
+                        <outlet property="moodControl" destination="okX-fs-Roj" id="S02-P0-bw9"/>
                         <outlet property="notesTextView" destination="npy-c0-9Wg" id="3eN-y4-hyB"/>
                         <outlet property="saveButton" destination="8Lm-gl-Tth" id="8oz-9A-FXh"/>
                     </connections>
@@ -93,6 +99,86 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dsD-hQ-hY8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2780" y="132"/>
+        </scene>
+        <!--Entry Details-->
+        <scene sceneID="hbg-cn-tDw">
+            <objects>
+                <viewController id="Tyf-wU-wcQ" customClass="EntryDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gVX-Hv-yxU">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="BmC-Jb-ozZ">
+                                <rect key="frame" x="20" y="140" width="374" height="722"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="2" translatesAutoresizingMaskIntoConstraints="NO" id="1mw-Uq-rZJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="32"/>
+                                        <segments>
+                                            <segment title="😀"/>
+                                            <segment title="😢"/>
+                                            <segment title="😐"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="I2e-uV-bk7">
+                                        <rect key="frame" x="0.0" y="34" width="374" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="Qzn-fb-TQk"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="hqI-zp-u79">
+                                        <rect key="frame" x="0.0" y="77" width="374" height="645"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C0c-bW-wUR">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vvK-2R-ZTG">
+                                                <rect key="frame" x="0.0" y="28.5" width="374" height="2"/>
+                                                <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="2" id="X6c-8S-Ne0"/>
+                                                </constraints>
+                                            </view>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Place notes here" translatesAutoresizingMaskIntoConstraints="NO" id="tXC-IJ-Ttj">
+                                                <rect key="frame" x="0.0" y="38.5" width="374" height="606.5"/>
+                                                <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="hqI-zp-u79" firstAttribute="leading" secondItem="BmC-Jb-ozZ" secondAttribute="leading" id="B7Q-dh-Kpb"/>
+                                    <constraint firstAttribute="bottom" secondItem="hqI-zp-u79" secondAttribute="bottom" id="i2H-bq-pwc"/>
+                                    <constraint firstAttribute="trailing" secondItem="hqI-zp-u79" secondAttribute="trailing" id="nt5-7c-VGh"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="BmC-Jb-ozZ" firstAttribute="leading" secondItem="M9V-Nt-8LG" secondAttribute="leading" constant="20" id="3Xe-1n-xAs"/>
+                            <constraint firstItem="M9V-Nt-8LG" firstAttribute="trailing" secondItem="BmC-Jb-ozZ" secondAttribute="trailing" constant="20" id="60j-6h-pYi"/>
+                            <constraint firstItem="BmC-Jb-ozZ" firstAttribute="bottom" secondItem="M9V-Nt-8LG" secondAttribute="bottom" id="79F-rc-ob6"/>
+                            <constraint firstItem="BmC-Jb-ozZ" firstAttribute="top" secondItem="M9V-Nt-8LG" secondAttribute="top" id="ozk-XR-AdN"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="M9V-Nt-8LG"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Entry Details" id="YBB-DT-fLt"/>
+                    <connections>
+                        <outlet property="journalDetailTextField" destination="I2e-uV-bk7" id="V9O-24-VPX"/>
+                        <outlet property="journalDetailTextView" destination="tXC-IJ-Ttj" id="r7h-0L-QVg"/>
+                        <outlet property="moodDetailControl" destination="1mw-Uq-rZJ" id="02l-0G-pfl"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="evg-Nd-sWP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1861" y="902"/>
         </scene>
         <!--Journal-->
         <scene sceneID="2e1-g1-Wsa">
@@ -103,7 +189,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryTableViewCell" rowHeight="218" id="d8g-81-m0C" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="218" id="d8g-81-m0C" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="218"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="d8g-81-m0C" id="5P4-26-dJd">
@@ -130,7 +216,7 @@
                                                         </label>
                                                     </subviews>
                                                 </stackView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NotesText" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="toO-6Z-MED">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NotesText" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="toO-6Z-MED">
                                                     <rect key="frame" x="0.0" y="28" width="358" height="152"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -150,6 +236,7 @@
                                     <outlet property="entryDate" destination="Edn-9w-kw7" id="w3T-gZ-U7h"/>
                                     <outlet property="entryTitle" destination="OQw-PD-8Qq" id="e5S-B7-LDY"/>
                                     <outlet property="notesText" destination="toO-6Z-MED" id="uQb-eD-mjY"/>
+                                    <segue destination="Tyf-wU-wcQ" kind="show" identifier="EntryDetailsViewController" id="psG-bI-BUx"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
